Use a less tyrannical branch of ezk

--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,5 @@
 {cover_print_enabled, true}.
 
 {deps,
- [ {ezk, ".*", {git, "https://github.com/puzza007/ezk.git", {branch, "master"}}}
+ [ {ezk, ".*", {git, "https://github.com/puzza007/ezk.git", {branch, "drop-logging-levels"}}}
  ]}.
