Implement proper worker spawning and result gathering
TODO:

* Tests for failures
* Workers that never result (Timeouts?)

--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,6 @@
 {cover_print_enabled, true}.
 
 {deps,
- [ {ezk, ".*", {git, "https://github.com/puzza007/ezk.git", {branch, "drop-logging-levels"}}}
+ [ {lager, ".*", {git, "https://github.com/basho/lager.git", {tag, "2.0.3"}}},
+   {ezk, ".*", {git, "https://github.com/puzza007/ezk.git", {branch, "drop-logging-levels"}}}
  ]}.
