--- a/rebar.config
+++ b/rebar.config
@@ -9,4 +9,5 @@
 {deps,
  [ {lager, ".*", {git, "https://github.com/basho/lager.git", {tag, "2.0.3"}}},
    {ezk, ".*", {git, "https://github.com/puzza007/ezk.git", {branch, "drop-logging-levels"}}}
+   {tic, ".*", {git, "https://github.com/Ubiquiti-Cloud/tic.git", {branch, "develop"}}}
  ]}.
