Switch over to different ezk branch

--- a/rebar.config
+++ b/rebar.config
@@ -8,6 +8,6 @@
 
 {deps,
  [ {lager, ".*", {git, "https://github.com/basho/lager.git", {tag, "2.0.3"}}},
-   {ezk, ".*", {git, "https://github.com/puzza007/ezk.git", {branch, "drop-logging-levels"}}}
+   {ezk, ".*", {git, "https://github.com/puzza007/ezk.git", {branch, "expose-additional-arities"}}},
    {tic, ".*", {git, "https://github.com/Ubiquiti-Cloud/tic.git", {branch, "develop"}}}
  ]}.
